--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                     </figure>
                 </div>
                 <div class="col-lg-5 col-xl-4 d-flex align-items-center">
-                    <img id="servicesVector" style="opacity:0.8; transform:scale(1.1);" class="img-fluid" src="assets/images/illustration3.png" alt="">
+                    <img id="servicesVector" style="opacity:0.8; transform:scale(1.2);" class="img-fluid" src="assets/images/illustration3.png" alt="">
                 </div>
             </div>
         </div>
@@ -551,7 +551,7 @@
     <section id="partner" class="non-hero" style="padding:3% 0;">
         <h2 class="text-center" style="margin-bottom: 60px;">Our Clients</h2>
         <div class="owl-carousel owl-theme owl-1">
-            <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+            <div class="item text-center p-2 d-flex- justify-content-center align-items-center flex-column">
                 <img class="w-100" src="assets/images/partner/log0.jpg" alt="company-logo">
             </div>
             <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
@@ -589,91 +589,122 @@
             </div>
         </div>
     </section>
+    <!-- testimonial -->
+    <section class="non-hero" style="padding:4% 0 10% 0; background-color: #0177be;">
+        <h2 id="titleImageFade" class="text-center text-white" style="margin-bottom: 45px;">Testimonials</h2>
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="testimonial" style="position:relative;">
+                <div id="titleImageFade" class="overflow-hidden">
+                    <img class="testimonial-bg" src="assets/images/testimonial-bg.png" alt="" class="iTechnologies">
+                </div>
+                <div class="image-caption">Life at iTechnologies</div>
+                <div id="clientWords" class="client-words">
+                    <h5 class="text-uppercase text-center">What our clients say</h5>
+                    <div class="owl-carousel owl-theme owl-3">
+                        <div class="item">
+                            <img class="client-photo d-block" src="assets/images/words/words1.png" alt="DHI" />
+                            <em class="client-speak">"Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ullam, consectetur"<br>
+                                - Mr Dorji, DHI, Bhutan</em> </div>
+                        <div class="item">
+                            <img class="client-photo d-block" src="assets/images/words/words2.png" alt="Bio Bhutan" />
+                            <em class="client-speak">"Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ullam, consectetur"<br>
+                                - Mr Tashi, Bio Bhutan</em>
+                        </div>
+                        <div class="item">
+                            <img class="client-photo d-block" src="assets/images/words/words3.png" alt="Bank of Bhutan" />
+                            <em class="client-speak">"Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ullam, consectetur"<br>
+                                - Mr Tashi, Bank of Bhutan</em>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- case study -->
     <div style="background-image: linear-gradient(rgba(58, 76, 111, 0.7), rgba(58, 76, 111, 0.7)), url(assets/images/bg-cs.jpg); background-position:center; background-size:cover; overflow: hidden; background-attachment: fixed; padding:5% 0;" class=" text-white d-flex flex-column justify-content-center align-items-center">
-        <h2 class="titleCaseStudy" style="letter-spacing: 2px; font-size:40px;">Case Studies</h1>
-            <div class="container mt-4">
-                <div class="owl-carousel owl-theme owl-2 caseOwl">
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 1</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+        <h2 class="titleCaseStudy" style="letter-spacing: 2px; font-size:40px;">Case Studies</h2>
+        <div class="container mt-4">
+            <div class="owl-carousel owl-theme owl-2">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 1</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 2</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+                </div>
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 2</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 2</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+                </div>
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 2</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 4</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+                </div>
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 4</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 5</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+                </div>
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 5</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
-                        <div class="fact">
-                            <div>
-                                <div class="case_study_card">
-                                    <h3>Case Study 6</h3>
-                                    <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                    <p class="card__apply mt-3">
-                                        <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
-                                    </p>
-                                </div>
+                </div>
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
+                    <div class="fact caseOwlitem">
+                        <div>
+                            <div class="case_study_card">
+                                <h3>Case Study 6</h3>
+                                <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
+                                <p class="card__apply mt-3">
+                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
     <!-- newsroom / blog -->
     <section class="non-hero newsroom" style="padding:4% 0;">
