--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         </div>
     </section>
     <!-- testimonial -->
-    <section class="non-hero" style="padding:4% 0 10% 0; background-color: #0177be;">
+    <section class="non-hero testimonialSection" style="padding:4% 0 10% 0; background-color: #0177be;">
         <h2 id="titleImageFade" class="text-center text-white" style="margin-bottom: 45px;">Testimonials</h2>
         <div class="d-flex justify-content-center align-items-center">
             <div class="testimonial" style="position:relative;">
