--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <div id="titleImageFade" class="overflow-hidden">
                     <img class="testimonial-bg" src="assets/images/testimonial-bg.png" alt="" class="iTechnologies">
                 </div>
-                <div class="image-caption">Life at iTechnologies</div>
+                <div id="titleImageFade" class="image-caption">Life at iTechnologies</div>
                 <div id="clientWords" class="client-words">
                     <h5 class="text-uppercase text-center">What our clients say</h5>
                     <div class="owl-carousel owl-theme owl-3">
