--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <div class="d-flex justify-content-center align-items-center">
             <div class="testimonial" style="position:relative;">
                 <div id="titleImageFade" class="overflow-hidden">
-                    <img class="testimonial-bg" src="assets/images/testimonial-bg.png" alt="" class="iTechnologies">
+                    <img class="testimonial-bg img-fluid" src="assets/images/testimonial-bg.png" alt="" class="iTechnologies">
                 </div>
                 <div id="titleImageFade" class="image-caption">Life at iTechnologies</div>
                 <div id="clientWords" class="client-words">
