--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <p class="sub-header mt-3 mb-3">Supporting digital transformations through information & technology.</p>
                     <!-- <p class="mb-5">iTechnologies, as your IT partner, can recommend the right technology from amongst many options and develop a IT roadmap based on the unique requirements, within the budget availability to support growth plans of an Organization. We offer independent and unbiased views by taking the time to gain a full and clear understanding of our Customer’s business – their objectives, issues, culture and people.</p> -->
                 </div>
-                <div class="col-lg-7 col-xl-8 d-flex align-items-center flex-wrap">
+                <div class="col-lg-7 col-xl-8 d-flex align-content-center align-itmes-center flex-wrap">
                     <figure class="snip1584 fadeIn m-2 flex-grow-1">
                         <figcaption>
                             <i><img class="img-fluid" src="assets/images/service1.png" alt=""></i>
