--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- white bg nav appear on scroll -->
-    <nav class="navbar navbar-expand-lg navbar-light py-1" id="navbarLight" style="transform:translateY(-100%); background-color:#fff; position: fixed; left: 0; right: 0; z-index: 100; opacity:0; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
+    <nav class="navbar navbar-expand-lg navbar-light py-1" id="navbarLight" style="transform:translateY(-100%); background-color:#fff; position: fixed; left: 0; right: 0; z-index: 100; top: 0; opacity:0; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img id="logo_one1" src="assets/images/cropped-logo1.png" alt="" class="d-inline-block align-text-top" style="width:85%;">
