--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
             <a class="navbar-brand" href="#">
                 <img style="width:85%;" id="logo" src="assets/images/logo-white1_3.png" alt="" class="d-inline-block align-text-top">
             </a>
-            <a class="navbar-brand" href="#" style="position:fixed; top:30px; left: 8%;">
-                <img style="width:85%; opacity: 0;" id="logo2" src="assets/images/logo-white1_4.png" alt="" class="d-inline-block align-text-top">
-            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,7 +53,7 @@
                         <a class="nav-link" href="#" title="Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Verticals">Verticals</a>
+                        <a class="nav-link" href="verticals.html" title="Verticals">Verticals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Case Study">Case Study</a>
@@ -81,7 +78,7 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- white bg nav appear on scroll -->
-    <nav class="navbar navbar-expand-lg navbar-light py-1" id="navbarLight" style="width: 100%; transform:translateY(-100%); background-color:#fff; position: fixed; z-index: 100; opacity:0; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
+    <nav class="navbar navbar-expand-lg navbar-light py-1 navbarLight" style="width: 100%; transform:translateY(-100%); background-color:#fff; position: fixed; z-index: 100; opacity:0; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img id="logo_one1" src="assets/images/cropped-logo1.png" alt="" class="d-inline-block align-text-top" style="width:85%;">
@@ -98,7 +95,7 @@
                         <a class="nav-link" href="#" title="Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Verticals">Verticals</a>
+                        <a class="nav-link" href="verticals.html" title="Verticals">Verticals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Case Study">Case Study</a>
@@ -504,7 +501,7 @@
         </div>
     </section>
     <!-- Milestones -->
-    <section style="background-color:#438945; padding-bottom: 3%; padding-top:3%;">
+    <section style="background-color:#168086; padding-bottom: 3%; padding-top:3%;">
         <div class="container">
             <!--  <div class="mb-5 threeLines">
                 <div class="mx-auto my-2" style="width: 100px; height:2px; background-color: #d69533;"></div>
@@ -551,7 +548,7 @@
         </div>
     </section>
     <!-- partners / clients -->
-    <section id="partner" class="non-hero" style="padding:3% 0;">
+    <section id="partner" class="non-hero" style="padding:3% 0 2% 0; ">
         <h2 class="text-center" style="margin-bottom: 60px;">Our Clients</h2>
         <div class="owl-carousel owl-theme owl-1">
             <div class="item text-center p-2 d-flex- justify-content-center align-items-center flex-column">
@@ -593,8 +590,8 @@
         </div>
     </section>
     <!-- testimonial -->
-    <section class="non-hero testimonialSection" style="padding:3% 0 7% 0; background-color: #0177be;">
-        <h2 id="titleImageFade" class="text-center text-white" style="margin-bottom: 45px;">Testimonials</h2>
+    <section class="non-hero testimonialSection" style="padding:3% 0 8% 0; background-color: #f3f3f3;">
+        <h2 id="titleImageFade" class="text-center" style="margin-bottom: 45px; color:#545454;">Testimonials</h2>
         <div class="d-flex justify-content-center align-items-center">
             <div class="testimonial" style="position:relative;">
                 <div id="titleImageFade" class="overflow-hidden">
@@ -624,7 +621,7 @@
         </div>
     </section>
     <!-- case study -->
-    <div style="background-color: #963596; background-position:center; background-size:cover; overflow: hidden; background-attachment: fixed; padding:3% 0;" class=" text-white d-flex flex-column justify-content-center align-items-center">
+    <div style="background-color: #0177be; background-position:center; background-size:cover; overflow: hidden; background-attachment: fixed; padding:3% 0;" class=" text-white d-flex flex-column justify-content-center align-items-center">
         <h2 class="titleCaseStudy" style="letter-spacing: 2px; font-size:40px;">Case Studies</h2>
         <div class="container mt-4">
             <div class="owl-carousel owl-theme owl-2">
@@ -636,7 +633,7 @@
                                 <img class="p-3" src="assets/images/it-consulting.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -650,7 +647,7 @@
                                 <img class="p-3" src="assets/images/system-integration.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -664,7 +661,7 @@
                                 <img class="p-3" src="assets/images/system-integration.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -678,7 +675,7 @@
                                 <img class="p-3" src="assets/images/system-integration.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -692,7 +689,7 @@
                                 <img class="p-3" src="assets/images/system-integration.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -706,7 +703,7 @@
                                 <img class="p-3" src="assets/images/system-integration.jpg" alt="">
                                 <p class="mt-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
                                 <p class="card__apply mt-3">
-                                    <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
+                                    <a class="card__link cstudy" href="#">Read more<i class="ms-2 fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -743,7 +740,7 @@
                         </div>
                         <div class="mt-3">
                             <p>
-                                <a class="view_more_btn" href="#">Read More</a>
+                                <a class="view_more_btn" href="#">View More</a>
                             </p>
                         </div>
                     </div>
@@ -755,7 +752,7 @@
         </div>
     </section>
     <!-- footer -->
-    <section class="footer" style="background-color:rgb(45 96 144);">
+    <section class="footer" style="background-color:#df8d13;">
         <div class="container pt-5 pb-4">
             <div class="row m-0 align-items-center">
                 <footer>
@@ -767,12 +764,12 @@
                         </div> -->
                         <div class="row justify-content-between">
                             <div class="col-md-4">
-                                <p class="text-uppercase mb-0" style="color:#f5b04a; font-size: 16px; letter-spacing: 1px;">Contact Details</p>
-                                <p class="mb-0"><span style="color:#efac4b;">Phone</span> : <a href="tel:+97502324163" title="">+ 975-02-32123456</a><br><span style="color:#efac4b;">Phone</span> : <a href="tel:+97502325831" title="">+ 975-02-32123456</a></p>
-                                <p class="mb-0"><span style="color:#efac4b;">Email</span> : <a href="mailto:info@karma.bt" title="">info@itechnologies.bt</a></p>
-                                <p class="styled-subtitle"><span style="color:#efac4b;">Office address</span> : <a target="_blank" href="" title="View location">Third Floor, Building 2, Norzin Lam, PO Box 1570 Thimphu, Bhutan 11001</a></p>
+                                <p class="text-uppercase mb-0" style="color:#fff; font-size: 16px; letter-spacing: 1px; font-weight: 400;">Contact Details</p>
+                                <p class="mb-0"><span style="color:#fff;">Phone</span> : <a href="tel:+97502324163" title="">+ 975-02-32123456</a><br><span style="color:#fff;">Phone</span> : <a href="tel:+97502325831" title="">+ 975-02-32123456</a></p>
+                                <p class="mb-0"><span style="color:#fff;">Email</span> : <a href="mailto:info@karma.bt" title="">info@itechnologies.bt</a></p>
+                                <p class="styled-subtitle"><span style="color:#fff;">Office address</span> : <a target="_blank" href="" title="View location">Third Floor, Building 2, Norzin Lam, PO Box 1570 Thimphu, Bhutan 11001</a></p>
                                 <div class="row social mt-4">
-                                    <span class="caption text-uppercase pb-3" style="color:#f5b04a; font-size: 16px; letter-spacing: 1px;">Follow us on :</span>
+                                    <span class="caption text-uppercase pb-3" style="color:#fff; font-size: 16px; letter-spacing: 1px;">Follow us on :</span>
                                     <ul class="list-unstyled p-0 m-0">
                                         <li class="d-inline-block ps-3"><a href=""><i class="pe-2 fab fa-facebook-f"></i></a></li>
                                         <li class="d-inline-block ps-4"><a href=""><i class="pe-2 fab fa-instagram"></i></a></li>
@@ -782,7 +779,7 @@
                                 </div>
                             </div>
                             <div class="col-md-2 text-end">
-                                <p class="text-uppercase mb-0" style="color:#f5b04a; font-size: 16px; letter-spacing: 1px;">Site Menu</p>
+                                <p class="text-uppercase mb-0" style="color:#fff; font-size: 16px; letter-spacing: 1px; font-weight: 400;">Site Menu</p>
                                 <p class="mb-0"><a href="" title="">Home</a></p>
                                 <p class="mb-0"><a href="" title="">Our Approach</a></p>
                                 <p class="mb-0"><a href="" title="">Services</a></p>
@@ -793,7 +790,7 @@
                                 <p class="mb-0"><a href="" title="">Contact us</a></p>
                             </div>
                             <div class="col-md-4 text-end">
-                                <p class="text-uppercase mb-2" style="color:#f5b04a; font-size: 16px; letter-spacing: 1px;">Locate Our office</p>
+                                <p class="text-uppercase mb-2" style="color:#fff; font-size: 16px; letter-spacing: 1px; font-weight: 400;">Locate Our office</p>
                                 <div class="mapouter">
                                     <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=200&amp;hl=en&amp;q=itechnologies&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.fnfgo.com/">FNF Online</a></div>
                                     <style>.mapouter{position:relative;text-align:right;width:100%;height:200px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:200px;}.gmap_iframe {height:200px!important;}</style>
@@ -801,13 +798,13 @@
                             </div>
                             <div class="text-center">
                                 <a href="#">
-                                    <i class="fa fa-angle-up p-0 m-0" style="color:#ef3e57; font-size: 27px;"></i><br>
-                                    <span style="font-size:13px; letter-spacing:1px; color:#ffe6e9; font-weight: 400;">SCROLL TO TOP</span>
+                                    <i class="fa fa-angle-up p-0 m-0" style="color:#e40c2b; font-size: 27px;"></i><br>
+                                    <span style="font-size:13px; letter-spacing:1px; color:#e40c2b; font-weight: 400;">SCROLL TO TOP</span>
                                 </a>
                             </div>
                             <div class="row copyright">
                                 <div class="col-md-12 text-center">
-                                    <p style="font-size: 13px; color:#b9b9b9;" class="pt-2 m-0"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
+                                    <p style="font-size: 13px; color:#dddddd;" class="pt-2 m-0"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
                                         Website Designed and Developed by <a href="https://www.abit.bt" title="ABit Private Limited">ABit Private Limited.</a>
                                     </p>
                                 </div>
