--- a/verticals.html
+++ b/verticals.html
@@ -198,7 +198,7 @@
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
                                     <h5 class="card__title">Document Management System</h5>
                                     <p class="card__apply">
-                                        <a class="card__link" href="#">View Details<i class="ms-2 fas fa-arrow-right"></i></a>
+                                        <a class="card__link" href="#">View Details<i style="font-size:17px;" class="ms-2 bi bi-arrow-up-right-circle"></i></i></a>
                                     </p>
                                     <a class="tileClick" href=""></a>
                                 </div>
@@ -210,7 +210,7 @@
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
                                     <h5 class="card__title">HR System</h5>
                                     <p class="card__apply">
-                                        <a class="card__link" href="#">View Details<i class="ms-2 fas fa-arrow-right"></i></a>
+                                        <a class="card__link" href="#">View Details<i style="font-size:17px;" class="ms-2 bi bi-arrow-up-right-circle"></i></i></a>
                                     </p>
                                     <a class="tileClick" href=""></a>
                                 </div>
@@ -222,7 +222,7 @@
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
                                     <h5 class="card__title">SMS Integration</h5>
                                     <p class="card__apply">
-                                        <a class="card__link" href="#">View Details<i class="ms-2 fas fa-arrow-right"></i></a>
+                                        <a class="card__link" href="#">View Details<i style="font-size:17px;" class="ms-2 bi bi-arrow-up-right-circle"></i></i></a>
                                     </p>
                                     <a class="tileClick" href=""></a>
                                 </div>
@@ -234,7 +234,7 @@
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
                                     <h5 class="card__title">Biometrics Software</h5>
                                     <p class="card__apply">
-                                        <a class="card__link" href="#">View Details<i class="ms-2 fas fa-arrow-right"></i></a>
+                                        <a class="card__link" href="#">View Details<i style="font-size:17px;" class="ms-2 bi bi-arrow-up-right-circle"></i></i></a>
                                     </p>
                                     <a class="tileClick" href=""></a>
                                 </div>
@@ -246,7 +246,7 @@
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
                                     <h5 class="card__title">Biometrics Software</h5>
                                     <p class="card__apply">
-                                        <a class="card__link" href="#">View Details<i class="ms-2 fas fa-arrow-right"></i></a>
+                                        <a class="card__link" href="#">View Details<i style="font-size:17px;" class="ms-2 bi bi-arrow-up-right-circle"></i></i></a>
                                     </p>
                                     <a class="tileClick" href=""></a>
                                 </div>
