--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark py-4" style="background-color:transparent; position: absolute; left: 0; right: 0; z-index: 100; ">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img style="width:85%;" id="logo" src="assets/images/logo-white1_3.png" alt="" class="d-inline-block align-text-top">
+                <img id="logo" src="assets/images/new-logo1.png" alt="" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,13 +47,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Our Approach">Our Approach</a>
+                        <a class="nav-link" href="our-approach.html" title="Our Approach">Our Approach</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="verticals.html" title="Verticals">Verticals</a>
+                        <a class="nav-link" href="#" title="Verticals">Verticals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Case Study">Case Study</a>
@@ -78,10 +78,10 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- white bg nav appear on scroll -->
-    <nav class="navbar navbar-expand-lg navbar-light py-1 navbarLight" style="width: 100%; transform:translateY(-100%); background-color:#fff; position: fixed; z-index: 100; opacity:0; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
+    <nav class="navbar navbar-expand-lg navbar-light py-2 navbarLight" style="display:none; width: 100%; background-color:#fff; position: fixed; z-index: 100; box-shadow: 0 3px 1rem rgb(0 0 0 / 10%);">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img id="logo_one1" src="assets/images/cropped-logo1.png" alt="" class="d-inline-block align-text-top" style="width:85%;">
+                <img id="logo_one1" src="assets/images/new-logo2.png" alt="" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -89,13 +89,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Our Approach">Our Approach</a>
+                        <a class="nav-link" href="our-approach.html" title="Our Approach">Our Approach</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="verticals.html" title="Verticals">Verticals</a>
+                        <a class="nav-link" href="#" title="Verticals">Verticals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" title="Case Study">Case Study</a>
@@ -204,12 +204,12 @@
     </div>
     <!-- intro div about us end -->
     <!-- hero section -->
-    <div class="hero panel px-4 text-center d-flex flex-column align-items-center justify-content-center" style="position:relative; padding-top: 250px; padding-bottom: 200px; min-height: 100vh;">
-        <div style="position: absolute; z-index: -1; right: 0; bottom: 0; min-width: 100%; min-height: 100%; background-color:#df8d13"></div>
+    <div class="hero panel px-4 text-center d-flex flex-column align-items-center justify-content-center" style="position:relative; padding-top: 220px; padding-bottom: 200px; min-height: 100vh;">
+        <div style="position: absolute; z-index: -1; right: 0; bottom: 0; min-width: 100%; min-height: 100%; background-color:#ffb806"></div>
         <div>
             <h1 class="heroContent text-white mb-4">Creating Digital Transformations</h1>
-            <div class="heroContent col-lg-7 mx-auto">
-                <p class="heroContent mb-5">We provide full scale IT consulting & software development services that help government and business to become more efficient and productive in carrying out their operations</p>
+            <div class="heroContent col-lg-6 mx-auto">
+                <p class="heroContent mb-5">We provide full scale IT consulting & software development services that help various organizations to become more efficient and productive in carrying out their operations. We operate with the mission to provide IT and ITES services with priority based on quality and client satisfaction.</p>
             </div>
             <div class="heroContent d-grid gap-2 d-flex justify-content-center">
                 <button class="snip1417">Get in touch</button>
@@ -226,7 +226,7 @@
     </div>
     </div>
     <!-- Services -->
-    <section class="sec1" style="padding: 3% 0px; background-color:#fff;">
+    <section style="padding: 3% 0px; background-color:#fff;">
         <!-- modals start-->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -501,7 +501,7 @@
         </div>
     </section>
     <!-- Milestones -->
-    <section style="background-color:#168086; padding-bottom: 3%; padding-top:3%;">
+    <section style="background-color:#0177be; padding-bottom: 3%; padding-top:3%;">
         <div class="container">
             <!--  <div class="mb-5 threeLines">
                 <div class="mx-auto my-2" style="width: 100px; height:2px; background-color: #d69533;"></div>
@@ -752,7 +752,7 @@
         </div>
     </section>
     <!-- footer -->
-    <section class="footer" style="background-color:#df8d13;">
+    <section class="footer" style="background-color:#ffb806;">
         <div class="container pt-5 pb-4">
             <div class="row m-0 align-items-center">
                 <footer>
@@ -799,12 +799,12 @@
                             <div class="text-center">
                                 <a href="#">
                                     <i class="fa fa-angle-up p-0 m-0" style="color:#e40c2b; font-size: 27px;"></i><br>
-                                    <span style="font-size:13px; letter-spacing:1px; color:#e40c2b; font-weight: 400;">SCROLL TO TOP</span>
+                                    <span style="font-size:11px; letter-spacing:1px; color:#e40c2b; font-weight: 400;">SCROLL TO TOP</span>
                                 </a>
                             </div>
                             <div class="row copyright">
                                 <div class="col-md-12 text-center">
-                                    <p style="font-size: 13px; color:#dddddd;" class="pt-2 m-0"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
+                                    <p style="font-size: 13px; color:#fff;" class="pt-2 m-0"> © Copyright 2021 <a href="http://karma.abitwebsites.com" title="Karma Group "> iTechnologies.</a> All Rights Reserved.
                                         Website Designed and Developed by <a href="https://www.abit.bt" title="ABit Private Limited">ABit Private Limited.</a>
                                     </p>
                                 </div>
