--- a/verticalstry.html
+++ b/verticalstry.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class=" col">
                     <div class="row" style="height:100%">
-                        <div class="col-lg-6 p-2">
+                        <div class="col-6 p-2">
                             <div class="cards fadeIn2">
                                 <div class="card">
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
@@ -204,7 +204,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 p-2">
+                        <div class="col-6 p-2">
                             <div class="cards fadeIn2">
                                 <div class="card">
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 p-2">
+                        <div class="col-4 p-2">
                             <div class="cards fadeIn2">
                                 <div class="card">
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
@@ -228,7 +228,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 p-2">
+                        <div class="col-4 p-2">
                             <div class="cards fadeIn2">
                                 <div class="card">
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 p-2">
+                        <div class="col-4 p-2">
                             <div class="cards fadeIn2">
                                 <div class="card">
                                     <div class="card__icon"><i class="bi bi-info-lg"></i></i></div>
