--- a/our-approach.html
+++ b/our-approach.html
@@ -175,6 +175,7 @@
             </div>
             <h2 style="font-size:25px" class="mt-5">Our Methodologies</h2>
             <p style="font-size:15px;" class="mt-3"><i style="color:grey;" class="fas fa-quote-left me-3"></i>Our overall methodology covers standard software development and implementation methodology tuned towards the operational scenario of government agencies. Our implementation method uses project phasing to include quality and control checkpoints and allow coordination of project activities throughout the implementation.<i style="color:grey;" class="fas fa-quote-right ms-3"></i></p>
+            <iframe src="https://onedrive.live.com/embed?cid=E15B8E99B9693155&amp;resid=E15B8E99B9693155%21361&amp;authkey=AJJHApOcSyQO7jY&amp;em=2&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
             <div class="row">
                 <div class="col-lg-6 pe-4">
                     <h2 style="font-size:25px" class="mt-5">Our Clients</h2>
